--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
       style="width: 100%; background-color: #ff0000; height: 70px"
     ></header>
     <section class="sectionHero grid grid2 fosN">
-      <div class="heroDisc fx-cl gap1" style="background-color: white">
-        <h1 style="font-size: 300%; text-align: center">
-          IMAGINE BEING ABLE TO MAKE HUNDREDS OF THOUSANDS OR EVEN MILLIONS BY
-          HAVING A PROFITABLE SIDE HUSTLE ON TOP OF YOUR CURRENT BUSINESS
+      <div class="heroDisc fx-cl gap1" style="background-color: white; width: 100%;">
+        <h1 style="font-size: 200%; text-align: center">
+          IMAGINE BEING ABLE TO MAKE <spam style="color: blue; font-size: 100%;">HUNDREDS OF THOUSANDS</spam> OR EVEN MILLIONS BY
+          HAVING A PROFITABLE <span style="color: blue; font-size: 100%;">SIDE HUSTLE</span> ON TOP OF YOUR CURRENT BUSINESS
         </h1>
         <a href="https://wa.link/6c7kbh" style="align-self: center">REGISTER NOW</a>
       </div>
       <figure class="heroDisc fx-cl gap1">
-        <img id="#" src="images/side-hustle-2.jpg" width="800" height="500" />
+        <img id="#" src="images/side-hustle-2.jpg" width="110%" />
       </figure>
     </section>
-    <section class="sectionItems grid grid4 gap2">
+    <section class="sectionItems grid gap2">
       <figure style="color: rgb(255, 255, 255)">
         <h2 style="text-align: center; line-height: 2">HEADER</h2>
         Imagine learning the Simple set of skills that business are paying top
@@ -56,8 +56,8 @@
         <figure style="background-color: #fafaff; color: green;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, magni perspiciatis?</figure> -->
     </section>
 
-    <section class="sectionFpattern grid grid2 gap2">
-      <div style="background-color: rgb(228, 220, 236)" class="fx-cl gap1">
+    <section class="sectionFpattern grid gap2">
+      <div style="background-color: rgb(228, 220, 236); width: 100%;" class="fx-cl gap1" >
         <h2 style="text-align: center; line-height: 2">HEADER</h2>
         <div class="fx gap1">
           <span><ion-icon name="caret-forward-outline"></ion-icon></span>
@@ -82,15 +82,15 @@
         </div>
       </div>
       <figure style="text-align: center">
-        <img id="#" src="images/Image1 (1).jpg" />
+        <img id="#" src="images/Image1 (1).jpg" width="100%" />
       </figure>
     </section>
     <section>
       <div class="image2">
-        <h3 style="line-height: 2; font-size: 150%">
+        <h3 style="line-height: 2; font-size: 100%; text-align: center;">
           Which is an online course that's priced between N1,000 to N5,000.
         </h3>
-        <img src="images/image.jpg" style="line-height: 3" />
+        <img src="images/image.jpg" width="100%" style="line-height: 3" />
       </div>
       <p class="line">
         My name is <strong>Sumayya Bello Yabo</strong> I'm 28year old married
@@ -102,8 +102,8 @@
         I want to challenge only <strong>100 people</strong> this month to
         launch a mini course that would earn them at least 300k.
       </p>
-
-      <h5 class="fx-jc gap1">
+      <img src="Image33.jpg" width="100%" style="line-height: 3" />
+      <h5 class="fx-jc gap1" style="width: 100; text-align: center;">
         <br /><br /><br />Just like my student who launched her mini-course of
         N1,000 and got 1,500 people to sign up.
       </h5>
@@ -116,16 +116,16 @@
           <a href="https://wa.link/6c7kbh" style="align-self: center; text-align: center"
             >REGISTER NOW</a
           >
-          <h2 style="font-size: 200%">WHAT TO LEARN</h2>
-          <div class="fx gap1" style="width: 35%">
+          <h2 style="font-size: 150%">WHAT TO LEARN</h2>
+          <div class="fx gap1" style="width: 100%">
             <span><ion-icon name="caret-forward-outline"></ion-icon></span>
             <p>More then 10 defferent side hustle idears.</p>
           </div>
-          <div class="fx gap1" style="width: 35%">
+          <div class="fx gap1" style="width: 100%">
             <span><ion-icon name="caret-forward-outline"></ion-icon></span>
             <p>How to identify the best side hustle for you.</p>
           </div>
-          <div class="fx gap1" style="width: 35%">
+          <div class="fx gap1" style="width: 100%">
             <span><ion-icon name="caret-forward-outline"></ion-icon></span>
             <p>Mindset shift and how to deal with fears and objection.</p>
           </div>
@@ -134,7 +134,7 @@
     </section>
     <hr />
     <h2 style="text-align: center">Get in Touch With Me!</h2>
-    <div style="text-align: center">
+    <div style="text-align: right;">
       <form action="https://formsubmit.co/umarmtukur55@gmail.com" method="POST">
         <input type="hidden" name="_captcha" value="false" />
         <input type="text" name="name" placeholder="Your name" required />
@@ -148,6 +148,7 @@
         <button class="submit">Send</button>
       </form>
     </div>
+    <img src="image44.jpg" width="100%" style="line-height: 3" />
     <footer
       style="
         position: fixed;
@@ -157,6 +158,7 @@
         height: 60px;
       "
     >
+  </footer>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
@@ -166,6 +168,6 @@
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
     
-    </footer>
+    
   </body>
 </html>
