--- a/index.html
+++ b/index.html
@@ -32,24 +32,23 @@
     </section>
     <section class="sectionItems grid gap2">
       <figure style="color: rgb(255, 255, 255)">
-        <h2 style="text-align: center; line-height: 2">HEADER</h2>
-        Imagine learning the Simple set of skills that business are paying top
+        <h2 style="text-align: center; line-height: 2"><span><ion-icon name="rocket-outline" style="color: aliceblue;"></ion-icon></span></h2>
+        Imagine learning the simple set of skills that business are paying top
         dollar for.
       </figure>
       <figure style="color: rgb(255, 255, 255)">
-        <h2 style="text-align: center; line-height: 2">HEADER</h2>
-        Image having a skills that business realy need and to pay buck for.
+        <h2 style="text-align: center; line-height: 2"><span><ion-icon name="rocket-outline" style="color: aliceblue;"></ion-icon></span></h2>
+        Imagine having a skills that business realy need and to pay buck for.
       </figure>
       <figure style="color: rgb(255, 255, 255)">
-        <h2 style="text-align: center; line-height: 2">HEADER</h2>
-        Having one stream of income is a risk becouse that business can fold up,
-        By then your are going to go into financial crisis, but if your have a
+        <h2 style="text-align: center; line-height: 2"><span><ion-icon name="diamond-outline" style="color: aliceblue;"></ion-icon></span></h2>
+        Having one stream of income is a risk because that business can fold up,
+        By then you are going to go into financial crisis, but if you have a
         side hustle and that happenned your will easily
       </figure>
       <figure style="color: rgb(255, 255, 255)">
-        <h2 style="text-align: center; line-height: 2">HEADER</h2>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, magni
-        perspiciatis?
+        <h2 style="text-align: center; line-height: 2"><span><ion-icon name="diamond-outline" style="color: aliceblue;"></ion-icon></span></h2>
+        With this high dollar rate, high shipping fee, unstable rates, we all need to lear new skills to add on to our income streams.
       </figure>
       <!-- <figure style="background-color: #fafaff; color: rgb(0, 30, 128);">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, magni perspiciatis?</figure>
         <figure style="background-color: #fafaff; color: green;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, magni perspiciatis?</figure>
@@ -57,24 +56,24 @@
     </section>
 
     <section class="sectionFpattern grid gap2">
-      <div style="background-color: rgb(228, 220, 236); width: 100%;" class="fx-cl gap1" >
-        <h2 style="text-align: center; line-height: 2">HEADER</h2>
+      <div style="background-color: rgb(212, 80, 238); width: 100%; color: aliceblue;" class="fx-cl gap1" >
+        <h2 style="text-align: center; line-height: 2"><span><ion-icon name="logo-wechat" style="color: white;"></ion-icon></span></h2>
         <div class="fx gap1">
-          <span><ion-icon name="caret-forward-outline"></ion-icon></span>
+          <span><ion-icon name="chevron-forward-circle-outline" style="color: white;"></ion-icon></span>
           <p>
             This is for anyone looking for a profitable side hustle, to add on
             top of just thier business.
           </p>
         </div>
         <div class="fx gap1">
-          <span><ion-icon name="caret-forward-outline"></ion-icon></span>
+          <span><ion-icon name="chevron-forward-circle-outline" style="color: aliceblue;"></ion-icon></span>
           <p>
             If you are stay at home num looking for profitable online side
             hustle your star from home
           </p>
         </div>
         <div class="fx gap1">
-          <span><ion-icon name="caret-forward-outline"></ion-icon></span>
+          <span><ion-icon name="chevron-forward-circle-outline" style="color: aliceblue;"></ion-icon></span>
           <p>
             You are 9-5 corporate worker looking for lucrative side hustle you
             can do to increase your revenue.
@@ -87,26 +86,17 @@
     </section>
     <section>
       <div class="image2">
-        <h3 style="line-height: 2; font-size: 100%; text-align: center;">
-          Which is an online course that's priced between N1,000 to N5,000.
-        </h3>
         <img src="images/image.jpg" width="100%" style="line-height: 3" />
       </div>
       <p class="line">
         My name is <strong>Sumayya Bello Yabo</strong> I'm 28year old married
         with kids, I'm passionate about making money Online. I have been able to
-        make moeny online since 3-4 years back amd now i will like to this with
+        make money online since 3-4 years back amd now i will like to this with
         you. I will be sharing profitable side income ideas with you, to make an
         extra income online even if you are an enterpreneur, busy worker or stay
-        at home mon. <br />
-        I want to challenge only <strong>100 people</strong> this month to
-        launch a mini course that would earn them at least 300k.
+        at home.
       </p>
-      <img src="Image33.jpg" width="100%" style="line-height: 3" />
-      <h5 class="fx-jc gap1" style="width: 100; text-align: center;">
-        <br /><br /><br />Just like my student who launched her mini-course of
-        N1,000 and got 1,500 people to sign up.
-      </h5>
+      <img src="Image55.jpg" width="100%" style="line-height: 3" />
       <section class="sectionHero grid grid2 fosN">
         <div class="heroDisc fx-cl gap1" style="background-color: white">
           <!-- <h1 style="font-size: 300%; text-align: center">
@@ -119,7 +109,7 @@
           <h2 style="font-size: 150%">WHAT TO LEARN</h2>
           <div class="fx gap1" style="width: 100%">
             <span><ion-icon name="caret-forward-outline"></ion-icon></span>
-            <p>More then 10 defferent side hustle idears.</p>
+            <p>More then 10 different side hustle ideas.</p>
           </div>
           <div class="fx gap1" style="width: 100%">
             <span><ion-icon name="caret-forward-outline"></ion-icon></span>
@@ -135,7 +125,7 @@
     <hr />
     <h2 style="text-align: center">Get in Touch With Me!</h2>
     <div style="text-align: right;">
-      <form action="https://formsubmit.co/umarmtukur55@gmail.com" method="POST">
+      <form action="https://formsubmit.co/bellosumayyayabo@gmail.com" method="POST">
         <input type="hidden" name="_captcha" value="false" />
         <input type="text" name="name" placeholder="Your name" required />
         <input type="email" name="email" placeholder="You gmail" required />
