--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
         with kids, I'm passionate about making money Online. I have been able to
         make money online since 3-4 years back amd now i will like to this with
         you. I will be sharing profitable side income ideas with you, to make an
-        extra income online even if you are an enterpreneur, busy worker or stay
-        at home.
+        extra income online even if you are an enterpreneur, busy worker or you start from home.
       </p>
       <img src="Image55.jpg" width="100%" style="line-height: 3" />
       <section class="sectionHero grid grid2 fosN">
@@ -139,7 +138,7 @@
       </form>
     </div>
     <img src="image44.jpg" width="100%" style="line-height: 3" />
-    <footer
+    <footer class="Foot"
       style="
         position: fixed;
         bottom: 0;
